--- a/src/app.css
+++ b/src/app.css
@@ -36,3 +36,7 @@
   --switch-color: var(--primary-inverse);
   --switch-checked-background-color: var(--primary);
 }
+
+hgroup {
+  margin-bottom: 0;
+}
