--- a/src/app.css
+++ b/src/app.css
@@ -1,36 +1,35 @@
-/* Deep-purple Light scheme (Default) */
+/* Light-blue Light scheme (Default) */
 /* Can be forced with data-theme="light" */
 [data-theme="light"],
 :root:not([data-theme="dark"]) {
-  --primary: #5e35b1;
-  --primary-hover: #512da8;
-  --primary-focus: rgba(94, 53, 177, 0.125);
+  --primary: #039be5;
+  --primary-hover: #0288d1;
+  --primary-focus: rgba(3, 155, 229, 0.125);
   --primary-inverse: #FFF;
 }
 
-/* Deep-purple Dark scheme (Auto) */
+/* Light-blue Dark scheme (Auto) */
 /* Automatically enabled if user has Dark mode enabled */
 @media only screen and (prefers-color-scheme: dark) {
   :root:not([data-theme]) {
-    --primary: #5e35b1;
-    --primary-hover: #673ab7;
-    --primary-focus: rgba(94, 53, 177, 0.25);
+    --primary: #039be5;
+    --primary-hover: #03a9f4;
+    --primary-focus: rgba(3, 155, 229, 0.25);
     --primary-inverse: #FFF;
   }
 }
 
-/* Deep-purple Dark scheme (Forced) */
+/* Light-blue Dark scheme (Forced) */
 /* Enabled if forced with data-theme="dark" */
 [data-theme="dark"] {
-  --primary: #5e35b1;
-  --primary-hover: #673ab7;
-  --primary-focus: rgba(94, 53, 177, 0.25);
+  --primary: #039be5;
+  --primary-hover: #03a9f4;
+  --primary-focus: rgba(3, 155, 229, 0.25);
   --primary-inverse: #FFF;
 }
 
-/* Deep-purple (Common styles) */
+/* Light-blue (Common styles) */
 :root {
-  --primary: #5e35b1;
   --form-element-active-border-color: var(--primary);
   --form-element-focus-color: var(--primary-focus);
   --switch-color: var(--primary-inverse);
